// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Hr API 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  border-top: 1px solid #D1D2D3;
}

<Hr>
  <styled-components__StyledHr>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__StyledHr-sc-1kwc7os-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  flex: 1;
  border: 0;
  border-top: 1px solid ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled-components__StyledHr",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styled-components__StyledHr-sc-1kwc7os-0",
          "target": "hr",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <hr
        className="c0"
      />
    </StyledComponent>
  </styled-components__StyledHr>
</Hr>
`;

exports[`Storyshots Hr With children 1`] = `
.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  border-top: 1px solid #D1D2D3;
}

.c2 {
  font-size: 0.923rem;
  margin: 0 8px;
  color: #999A94;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

<Hr>
  <styled-components__Wrapper>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__Wrapper-sc-1kwc7os-2",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  align-items: center;
  width: 100%;
",
            ],
          },
          "displayName": "styled-components__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styled-components__Wrapper-sc-1kwc7os-2",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <styled-components__StyledHr>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledHr-sc-1kwc7os-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  flex: 1;
  border: 0;
  border-top: 1px solid ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "styled-components__StyledHr",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styled-components__StyledHr-sc-1kwc7os-0",
                "target": "hr",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <hr
              className="c1"
            />
          </StyledComponent>
        </styled-components__StyledHr>
        <styled-components__Content>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__Content-sc-1kwc7os-1",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    "
  font-size: ",
                    [Function],
                    ";
  margin: 0 8px;
  color: ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "styled-components__Content",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styled-components__Content-sc-1kwc7os-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c2"
            >
              String
            </div>
          </StyledComponent>
        </styled-components__Content>
        <styled-components__StyledHr>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledHr-sc-1kwc7os-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  flex: 1;
  border: 0;
  border-top: 1px solid ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "styled-components__StyledHr",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styled-components__StyledHr-sc-1kwc7os-0",
                "target": "hr",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <hr
              className="c1"
            />
          </StyledComponent>
        </styled-components__StyledHr>
      </div>
    </StyledComponent>
  </styled-components__Wrapper>
</Hr>
`;
